# CodeSnippets

./: .gitignore
CMake/: README.md
CMake/0single/: CMakeLists.txt  README.md
CMake/1multi/: CMakeLists.txt  main.cpp  newbar.cpp
CMake/2subfolder/: CMakeLists.txt
CMake/3CMAKE_BUILD_TYPE/: CMakeLists.txt  README.md  main.cpp
CMake/4project/: CMakeLists.txt  README.md
CMake/5template/: CMakeLists.txt
CMake/6link/: CMakeLists.txt  README.md  foo.cpp  main.cpp
CMake/linker/: CMakeLists.txt  foo.cpp  main.cpp
CXX/Lambda/: CMakeLists.txt  README.md  lambda.cpp
CXX/class/: CMakeLists.txt  main.cpp
CXX/demo/: CMakeLists.txt  MyClass.h  main.cpp  multilayer.h
CXX/enum/: main.cpp
CXX/functional/: CMakeLists.txt  main.cpp
CXX/misc/: CMakeLists.txt  main.cpp
CXX/pointer/: CMakeLists.txt  test_pointer.cpp
CXX/std/: main.cpp
CXX/value/: CMakeLists.txt  LandR.cpp  move.cpp  test_value.cpp
Javascript/Promise/: 0test_promise.js  1load.js  2promise_chain.js
Javascript/ThreeJS/template/: main.js
graphics/OpenVDB/: 1grid.cpp  2mygrid.cpp  CMakeLists.txt  README.md  mygrids.vdb
graphics/shadertoy/: 0coord.glsl  1grid.glsl  2plot.glsl
numerical/: CMakeLists.txt  README.md
parallel/benchmark/: CMakeLists.txt  README.md  bm_for.cpp  bm_for_2d.cpp  bm_for_3d.cpp  bm_for_nd.cpp  test_for.cpp
parallel/producer-consumer/: CMakeLists.txt  main.cpp  main0.cpp  main1.cpp  main2.cpp
parallel/testCPP/: CMakeLists.txt  README.md  test_thread.cpp
parallel/testTBB/: CMakeLists.txt  README.md  test_invoke.cpp  test_parallel_for.cpp  test_parallel_for_each.cpp  test_parallel_reduce.cpp
